samples/_failures_safe/1761295861_ce889e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bacebfe.c: In function ‘main’:
./samples/SAFE/__tmp_9bacebfe.c:167:17: error: expected ‘;’ at end of input
  167 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_9bacebfe.c:167:9: error: expected declaration or statement at end of input
  167 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_9bacebfe.c:167:9: error: expected declaration or statement at end of input
